--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -1,35 +1,51 @@
 <!DOCTYPE HTML>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-  <title>Taller Web I</title>
-
-  <!-- Boostrap core css -->
-  <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
-
-  <!-- custom style -->
-  <link rel="stylesheet" th:href="@{/css/main.css}"/>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Taller Web I</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
 <body>
-
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-  <a class="navbar-brand" href="#">UNLAM</a>
-</nav>
-
-<main role="main" class="container">
-  <div class = "container">
-    <h1>Bienvenidos a Taller Web 1</h1>
-
-    <a href="login.html" class="btn btn-lg btn-primary btn-block">Volver</a>
-  </div>
+<main class="bg-[url('https://wallpapers.com/images/hd/red-fixie-bike-photography-vefktg61dhju37ur.jpg')] opacity-90 bg-no-repeat bg-cover bg-center h-screen flex flex-col justify-center items-center">
+    <div class="w-[90%] h-[90%] p-2 sm:p-4 flex flex-col items-center bg-slate-50 rounded">
+        <nav class="w-full border-gray-200 bg-gray-50">
+            <div class="flex flex-col sm:flex-row items-center justify-between mx-auto p-4">
+                <div class="w-full md:block md:w-auto">
+                    <ul class="flex font-medium mt-4 md:space-x-8 md:mt-0 md:border-0">
+                        <li>
+                            <a href="#"
+                               class="block p-2 text-blue-700 md:p-0"
+                               aria-current="page">Home</a>
+                        </li>
+                        <li>
+                            <a href="#"
+                               class="block p-2 text-gray-900 hover:text-blue-700 md:p-0">Services</a>
+                        </li>
+                        <li>
+                            <a href="#"
+                               class="block p-2 text-gray-900 hover:text-blue-700 md:p-0">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#"
+                               class="block p-2 text-gray-900 hover:text-blue-700 md:p-0">Contact</a>
+                        </li>
+                    </ul>
+                </div>
+                <form action="#" th:action="@{/cerrar-sesion}" method="POST">
+                    <button type="submit" class="block p-2 text-gray-900 hover:text-blue-700 md:p-0">
+                        Cerrar sesión
+                    </button>
+                </form>
+            </div>
+        </nav>
+        <div th:if="${rol == 'Propietario'}">
+            <p class="text-3xl font-bold text-gray-900">Vista Propietario</p>
+        </div>
+        <div th:if="${rol == 'Cliente'}">
+            <p class="text-3xl font-bold text-gray-900">Vista Cliente</p>
+        </div>
+    </div>
 </main>
-<!-- /.container -->
-
-<!-- Boostrap core js -->
-<script type="text/javascript" th:src="@{webjars/bootstrap/5.2.0/js/bootstrap.min.js}"></script>
 </body>
 </html>
