--- a/src/main/webapp/WEB-INF/views/thymeleaf/login.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/login.html
@@ -3,49 +3,44 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <title>Taller Web I</title>
-
-    <!-- Boostrap core css -->
-    <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.0/css/bootstrap.min.css}"/>
-
-    <!-- custom style -->
-    <link rel="stylesheet" th:href="@{/css/main.css}"/>
-
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
-
 <body>
-
-<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-    <a class="navbar-brand" href="#">UNLAM</a>
-</nav>
-
-<main role="main" class="container">
-
-    <div class ="container">
-        <div class="row justify-content-center">
-            <div id="loginbox" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 mt-5">
-                <form class="card card-body mx-auto" action="#" th:action="@{/validar-login}" method="POST" th:object="${datosLogin}">
-                    <h3 class="form-signin-heading">Taller Web I</h3>
-                    <hr class="colorgraph"><br>
-
-                    <input th:field="*{email}" id="email" type="email" class="form-control" required/>
-                    <input th:field="*{password}" type="password" id="password" class="form-control" required/>
-
-                    <button id="btn-login" class="btn btn-lg btn-primary btn-block" Type="Submit">Login</button>
-
-                    <p th:if="${error != null}" class="alert alert-danger" th:text="'Error ' + ${error}">
-                    </p>
-                </form>
-                <a id="ir-a-registrarme" href="nuevo-usuario">Registrarme</a>
+<main class="bg-[url('https://wallpapers.com/images/hd/red-fixie-bike-photography-vefktg61dhju37ur.jpg')] opacity-90 bg-no-repeat bg-cover bg-center h-screen flex flex-col justify-center items-center">
+    <div class="w-[360px] xl:w-[480px] py-5 sm:py-10 flex flex-col items-center bg-slate-50 rounded">
+        <h1 class="mb-6 text-3xl font-bold text-gray-900">Iniciar sesión</h1>
+        <form class="w-full" action="#" th:action="@{/validar-login}" method="POST" th:object="${datosLogin}">
+            <div class="w-80 mx-auto mb-6">
+                <label for="email" class="block mb-2 text-sm font-medium text-gray-900">Email</label>
+                <input th:field="*{email}" id="email" type="email"
+                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                       autocomplete="off" required/>
             </div>
-        </div>
-
+            <div class="w-80 mx-auto mb-6">
+                <label for="password"
+                       class="block mb-2 text-sm font-medium text-gray-900">Contraseña</label>
+                <input th:field="*{password}" type="password" id="password"
+                       class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                       autocomplete="off" required/>
+            </div>
+            <div th:if="${error != null}"
+                 class="w-80 mx-auto p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400"
+                 role="alert">
+                <span th:text="${error}" class="font-medium"></span>
+            </div>
+            <div class="text-center">
+                <button type="submit"
+                        class="w-72 sm:w-80 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm my-2 mb-2 px-5 py-2.5 text-center">
+                    Ingresar
+                </button>
+            </div>
+        </form>
+        <a href="nuevo-usuario"
+           class="w-72 sm:w-80 mt-2 py-2.5 px-5 text-sm font-medium text-center text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-gray-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-200">
+            Registrarme
+        </a>
     </div>
 </main>
-<!-- /.container -->
-
-<!-- Boostrap core js -->
-<script type="text/javascript" th:src="@{webjars/bootstrap/5.2.0/js/bootstrap.min.js}"></script>
 </body>
 </html>
