--- a/src/main/webapp/WEB-INF/views/thymeleaf/detalle-bicicleta.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/detalle-bicicleta.html
@@ -10,14 +10,21 @@
 <main class="bg-[url('https://wallpapers.com/images/hd/red-fixie-bike-photography-vefktg61dhju37ur.jpg')] opacity-90 bg-no-repeat bg-cover bg-center h-screen flex flex-col justify-center items-center">
     <div class="w-[90%] h-[90%] p-2 sm:p-4 flex flex-col items-center bg-slate-50 rounded">
 
-        <div th:replace="~{partials/nav}"></div>
+        <div th:replace="~{partials/nav :: nav}"></div>
+
+        <div th:if="${bicicleta}">
+            <h1 class="text-4xl font-bold text-center text-gray-900 mb-3">Detalle Bicicleta (Cliente)</h1>
+            <p th:text="${bicicleta.getId()}"></p>
+            <div th:replace="~{components/formClienteAlquilerBici :: div}"></div>
+
+        </div>
+
         <div th:if="${rol == 'Propietario'}">
             <p class="text-3xl font-bold text-gray-900">Vista Propietario</p>
         </div>
 
         <div th:if="${rol == 'Cliente'}">
-            <h1 class="text-4xl font-bold text-center text-gray-900 mb-3">Vista Cliente</h1>
-            <div th:replace="~{components/listaBicicletas}"></div>
+            <h1 class="text-4xl font-bold text-center text-gray-900 mb-3">Detalle Bicicleta (Cliente)</h1>
         </div>
     </div>
 </main>
