--- a/src/main/webapp/WEB-INF/views/thymeleaf/components/listaBicicletas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/components/listaBicicletas.html
@@ -1,13 +1,16 @@
 <div class="grid grid-cols-3 gap-4">
-  <div th:each="item : ${bicicletas}" class="bg-white shadow-lg rounded-lg p-4 hover:shadow-xl transition duration-300 ease-in-out">
-    <div>
-      <span class="text-lg font-semibold">Bicicleta ID: <span th:text="${item.id}"></span></span>
+    <div th:each="item : ${bicicletas}"
+         class="bg-white shadow-lg rounded-lg p-4 hover:shadow-xl transition duration-300 ease-in-out">
+        <div>
+            <span class="text-lg font-semibold">Bicicleta ID: <span th:text="${item.id}"></span></span>
+        </div>
+        <div>
+            <span class="text-gray-700">Descripción: <span th:text="${item.descripcion}"></span></span>
+        </div>
+        <div class="mt-4">
+            <a th:href="'/bicicleta/detalle/' + ${item.id}"
+               class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition duration-300 ease-in-out">Ir
+                al detalle</a>
+        </div>
     </div>
-    <div>
-      <span class="text-gray-700">Descripción: <span th:text="${item.descripcion}"></span></span>
-    </div>
-    <div class="mt-4">
-      <a th:href="'/detalle/' + ${item.id}" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition duration-300 ease-in-out">Ir al detalle</a>
-    </div>
-  </div>
 </div>
