--- a/src/main/webapp/WEB-INF/views/thymeleaf/detalle-bicicleta.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/detalle-bicicleta.html
@@ -17,7 +17,24 @@
             <p th:text="${bicicleta.getId()}"></p>
             <p th:text="${bicicleta.getEstadoBicicleta()}"></p>
             <p th:text="${bicicleta.getDescripcion()}"></p>
-            <div th:replace="~{components/formSelectorHorasParaAlquilar.html :: div}"></div>
+            <!--<div th:replace="~{components/formSelectorHorasParaAlquilar.html :: div}"></div>-->
+
+            <form class="w-full" th:action="@{/bicicleta/{bicicletaId}/crear-alquiler(bicicletaId=${bicicleta.id})}" th:object="${datosAlquiler}"  method="POST">
+                <div class="w-80 mx-auto mb-6">
+                    <label for="cantidadHoras" class="block mb-2 text-sm font-medium text-gray-900">Horas</label>
+                    <input th:field="*{cantidadHoras}" id="cantidadHoras" type="number" name="horas"
+                           class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
+                           autocomplete="off" required/>
+                </div>
+
+                <div class="text-center">
+                    <button type="submit"
+                            class="w-72 sm:w-80 text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm my-2 mb-2 px-5 py-2.5 text-center">
+                        Comenzar alquilacion
+                    </button>
+                </div>
+            </form>
+
 
         </div>
 
