--- a/src/main/webapp/WEB-INF/views/thymeleaf/registrar-bicicleta.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/registrar-bicicleta.html
@@ -30,6 +30,11 @@
                               class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
                               autocomplete="off" rows="4" required></textarea>
                 </div>
+                <div class="w-80 sm:w-96 mx-auto mb-6">
+                    <label for="urlImg"
+                           class="block mb-2 text-sm font-medium text-gray-900">Url Imagen</label>
+                    <input type="text" id="urlImagen" name="urlImagen"><br><br>
+                </div>
                 <div th:if="${error != null}"
                      class="w-80 mx-auto p-4 mb-4 text-sm text-red-800 rounded-lg bg-red-50"
                      role="alert">
