--- a/src/main/webapp/WEB-INF/views/thymeleaf/components/listaBicicletas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/components/listaBicicletas.html
@@ -1,7 +1,9 @@
-<div class="grid grid-cols-3 gap-4">
+<div class="grid grid-cols-1 md:grid-cols-3 gap-4">
     <div th:each="item : ${bicicletas}"
          class="bg-white shadow-lg rounded-lg p-4 hover:shadow-xl transition duration-300 ease-in-out">
-    <div>    <img  th:src="${item.urlImagen}" class="w-64 sm:w-80 h-auto rounded-t-lg img-fluid" style="width: 400px; height: 300px;" alt=""/></div>
+
+        <img th:src="${item.urlImagen}" class="w-64 sm:w-80 h-auto rounded-t-lg img-fluid" alt=""/>
+
         <div>
             <span class="text-lg font-semibold">Bicicleta ID: <span th:text="${item.id}"></span></span>
         </div>
