Arreglo los test que no corrían.

--- a/src/main/webapp/WEB-INF/views/thymeleaf/partials/nav.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/partials/nav.html
@@ -24,7 +24,7 @@
                 <li th:if="${rol == 'Cliente'}">
                     <a th:href="@{'/mis-alquileres'}"
                        th:class="${#httpServletRequest.requestURI == '/mis-bicicletas'} ? 'block p-2 text-blue-700 md:p-0' : 'block p-2 text-gray-900 hover:text-blue-700 md:p-0'">
-                        Mis bicicletas
+                        Mis alquileres
                     </a>
                 </li>
             </ul>
