--- a/src/main/webapp/WEB-INF/views/thymeleaf/mis-alquileres.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/mis-alquileres.html
@@ -16,14 +16,15 @@
                 <div th:if="${#lists.isEmpty(datosAlquiler)}">
                     <p class="font-medium text-gray-900 text-center text-lg">No tenés alquileres registrados</p>
                 </div>
-
-               <form th:action="@{/alquiler/{idAlquiler}/finalizar-alquiler(idAlquiler=${alquiler.id})}"  th:each="alquiler: ${alquileres}" class="bg-white rounded-lg px-2 py-3">
-                   <p th:text="${alquiler.id}"></p>
-                   <p th:text="${alquiler.cantidadHoras}"></p>
-                   <p th:text="${alquiler.bicicleta.descripcion}"></p>
-                   <button type="submit" class="px-3 py-2 bg-primary">Finalizar Alquiler</button>
-               </form>
-
+                <div th:each="alquiler: ${alquileres}">
+                    <form th:action="@{/alquiler/{idAlquiler}/finalizar-alquiler(idAlquiler=${alquiler.id})}"
+                          class="bg-white rounded-lg px-2 py-3">
+                        <p th:text="${alquiler.id}"></p>
+                        <p th:text="${alquiler.cantidadHoras}"></p>
+                        <p th:text="${alquiler.bicicleta.descripcion}"></p>
+                        <button type="submit" class="px-3 py-2 bg-primary">Finalizar Alquiler</button>
+                    </form>
+                </div>
             </div>
         </div>
     </div>
