--- a/src/main/webapp/WEB-INF/views/thymeleaf/components/listaBicicletas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/components/listaBicicletas.html
@@ -10,6 +10,8 @@
         <div>
             <span class="text-gray-700">Descripción: <span th:text="${item.descripcion}"></span></span>
         </div>
+
+        <div><span th:text="${item.condicion}"></span></div>
         <div class="mt-4">
             <a th:href="'/bicicleta/detalle/' + ${item.id}" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition duration-300 ease-in-out">Ir
                 al detalle</a>
