--- a/src/main/webapp/WEB-INF/views/thymeleaf/mapa.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/mapa.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Mapa</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin=""/>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 </head>
 <body>
-<div id="map" style="width: 100%; height: 100vh"></div>
+<div th:replace="~{partials/nav}"></div>
+<div id="map" style="width: 100%; height: 90vh"></div>
 <script th:inline="javascript">
     const propietarios = [[${propietarios}]];
-
     let map;
-
     function initializeMap() {
         map = L.map('map', {
             zoom: 15
@@ -28,6 +29,10 @@
             const userLatitude = position.coords.latitude;
             const userLongitude = position.coords.longitude;
             map.setView([userLatitude, userLongitude]);
+            L.marker([userLatitude, userLongitude]).addTo(map).bindPopup(`
+                <b>Tu ubicacion</b><br>
+                <a href="/home">Ir Home</a>
+            `);
         });
 
         for (let i = 0; i < propietarios.length; i++) {
