--- a/src/main/webapp/WEB-INF/views/thymeleaf/mis-bicicletas.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/mis-bicicletas.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <main class="bg-[url('https://wallpapers.com/images/hd/red-fixie-bike-photography-vefktg61dhju37ur.jpg')] opacity-90 bg-no-repeat bg-cover bg-center min-h-screen flex flex-col justify-center items-center">
-    <div class="absolute w-[90%] min-h-[90%] p-2 sm:p-4 flex flex-col items-center bg-slate-50 rounded">
+    <div class="mt-5 w-[90%] p-2 sm:p-4 flex flex-col items-center bg-slate-50 rounded">
         <div th:replace="~{partials/nav}"></div>
         <div class="w-full my-5 sm:my-0 sm:h-full sm:flex sm:flex-col sm:items-center sm:justify-center">
             <p class="my-5 sm:my-10 text-3xl font-bold text-gray-900 text-center">Bicicletas</p>
