Calculo de precio por hora mediante precio de bicicleta

--- a/src/main/webapp/WEB-INF/views/thymeleaf/home.html
+++ b/src/main/webapp/WEB-INF/views/thymeleaf/home.html
@@ -12,11 +12,18 @@
 
         <div th:replace="~{partials/nav}"></div>
         <div th:if="${rol == 'Propietario'}">
-            <p class="text-3xl font-bold text-gray-900">Vista Propietario</p>
+            <h1 class="text-3xl font-bold text-gray-900 text-center mb-8">Bienvenido, <span th:text="${usuario.nombre}"></span></h1>
+            <h1 class="text-2xl text-center mb-4">Desde aquí, podrás administrar tus bicicletas</h1>
+            <h1 class="text-2xl text-center mb-4">Te aseguramos que si alquilas tu bicicleta durante 50 horas, ganarás tanto como si la vendieras, e incluso un poco más</h1>
+            <h1 class="text-2xl text-center mb-4">Esto se debe a que consideramos el desgaste de la bicicleta en nuestros cálculos</h1>
+            <h1 class="text-2xl text-center mb-4">Para determinar el valor por hora, simplemente ingresa el precio actual al que tienes en venta la bicicleta cuando la registres para alquiler</h1>
+            <h1 class="text-2xl text-center">¡Esto hará que el cálculo sea más preciso y rentable para ti!</h1>
         </div>
 
         <div th:if="${rol == 'Cliente'}">
-            <h1 class="text-4xl font-bold text-center text-gray-900 mb-3">Vista Cliente</h1>
+            <h1 class="text-4xl font-bold text-center text-gray-900 mb-3">Bienvenido, <span th:text="${usuario.nombre}"></span></h1>
+            <h1 class="text-3xl font-bold text-gray-900 text-center mb-8">¡Explora la oferta de bicis que tenemos en alquiler!</h1>
+
             <div th:replace="~{components/listaBicicletas}"></div>
         </div>
     </div>
